<resources>
    <string name="app_name">Rick Rolls</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open_sidebar">open</string>
    <string name="close_sidebar">close</string>
    <string name="favorites">Favorites</string>
    <string name="time">Time:</string>
    <string name="dairyFree">Dairy free:</string>
    <string name="glutenFree">Gluten free:</string>
    <string name="vegan">Vegan:</string>
    <string name="servings">Servings:</string>
    <string name="readyInMinutes">Ready in \nminutes:</string>
    <string name="recipe_search">Recipe Search</string>
    <string name="recipe_information">Recipe Information</string>
    <string name="fragment_weekly">Weekly Recipes :)</string>
    <string name="recipe_name">Name:</string>
    <string name="step">Step </string>
    <string name="ingredientsWord">Ingredients:\n (slide for more)</string>
    <string name="Recipe_Search">Recipe Search</string>

    <string name="extended_information">This is an app created by me :) for the purpose of devcamp i shall rush it uwuwuwuwu</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="ingredients">Search By Ingredients</string>
    <string name="dish_name">Search By Dish Name</string>
    <string name="nutrients">Search By Nutrients</string>
    <string name="weekly">Weekly Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>