<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ScreenBackground"
    tools:context=".ui.extendedInformation.FragmentExtendedInformation">
    <View
        android:id="@+id/view"
        style="@style/SubBackground"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/udon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="20dp"
        android:foregroundGravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        />
    <TextView
        android:id="@+id/dairyTag"
        android:layout_marginTop="10dp"
        style="@style/TextAppearance"
        android:layout_marginLeft="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/dairyText"
        android:text="@string/dairyFree"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/dairyText"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/dairyFree"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <TextView
        android:id="@+id/glutenText"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/glutenFree"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/dairyText"
        app:layout_constraintTop_toBottomOf="@+id/dairyTag" />

    <TextView
        android:id="@+id/glutenTag"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/glutenFree"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/glutenText"
        app:layout_constraintTop_toBottomOf="@+id/dairyTag" />

    <TextView
        android:id="@+id/veganText"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vegan"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/glutenText"
        app:layout_constraintTop_toBottomOf="@+id/glutenTag" />

    <TextView
        android:id="@+id/veganTag"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vegan"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/veganText"
        app:layout_constraintTop_toBottomOf="@+id/glutenTag" />

    <TextView
        android:id="@+id/readyInMinutes"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/readyInMinutes"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/readyInMinutesText"
        app:layout_constraintBottom_toBottomOf="@id/readyInMinutesText" />
    <TextView
        android:id="@+id/readyInMinutesText"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/readyInMinutes"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/servingsText"
        app:layout_constraintTop_toBottomOf="@+id/servings" />

    <TextView
        android:id="@+id/recipeName"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/recipe_information"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/recipeNameText"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
    <TextView
        android:id="@+id/recipeNameText"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/recipeName" />
    <TextView
        android:id="@+id/servings"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/servings"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/servingsText"
        app:layout_constraintTop_toBottomOf="@+id/veganTag" />

    <TextView
        android:id="@+id/servingsText"
        style="@style/TextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/servings"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/veganText"
        app:layout_constraintTop_toBottomOf="@+id/veganTag" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/ingredientsViewPager"
        style="@style/StrongColor"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:text="@string/extended_information"
        app:layout_constraintBottom_toTopOf="@id/instructionsViewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"></androidx.viewpager2.widget.ViewPager2>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/instructionsViewPager"
        style="@style/StrongColor"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:text="@string/extended_information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredientsViewPager" />

    <LinearLayout
        android:layout_margin="1dp"
        android:id="@+id/star_layout"
        style="@style/SubBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">



        <ImageButton
            android:id="@+id/favorite_button"
            style="@style/StrongColor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/baseline_star_24" />

    </LinearLayout>
    <LinearLayout
        android:layout_margin="1dp"
        android:id="@+id/star_layout_checked"
    style="@style/StrongColor"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:layout_constraintEnd_toEndOf="@+id/imageView"
    app:layout_constraintTop_toTopOf="@+id/imageView">
    <ImageButton
        android:id="@+id/favorited_button"
        style="@style/StrongColor"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/baseline_star_24" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>