<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment" >

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ScreenBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            style="@style/SubBackground"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/rick_rolls"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/image_scroller"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/dish"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/ingredients"
            android:layout_width="298dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:scaleType="centerCrop"
            android:src="@drawable/udon"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_scroller" />

        <View
            style="@style/SubBackground"
            android:layout_width="0dp"

            android:layout_height="0dp"
            android:alpha="0.5"
            app:layout_constraintBottom_toBottomOf="@id/ingredients_text"
            app:layout_constraintEnd_toEndOf="@id/ingredients_text"
            app:layout_constraintStart_toStartOf="@id/ingredients_text"
            app:layout_constraintTop_toTopOf="@id/ingredients_text" />

        <TextView
            android:id="@+id/ingredients_text"
            style="@style/TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/dish_name"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/ingredients"
            app:layout_constraintEnd_toEndOf="@id/ingredients"
            app:layout_constraintStart_toStartOf="@id/ingredients"
            app:layout_constraintTop_toTopOf="@id/ingredients" />


        <ImageButton
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/nutrients_search"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:background="#00000000"
            android:scaleType="centerCrop"
            android:src="@drawable/abs"
            app:layout_constraintEnd_toStartOf="@id/weekly_recommended"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients" />

        <View
            android:id="@+id/view2"
            style="@style/SubBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.5"
            app:layout_constraintBottom_toBottomOf="@id/nutrients_text"
            app:layout_constraintEnd_toEndOf="@id/nutrients_text"
            app:layout_constraintStart_toStartOf="@id/nutrients_text"
            app:layout_constraintTop_toTopOf="@id/nutrients_text" />

        <TextView
            android:id="@+id/nutrients_text"
            style="@style/TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/nutrients"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/nutrients_search"
            app:layout_constraintEnd_toEndOf="@id/nutrients_search"
            app:layout_constraintStart_toStartOf="@id/nutrients_search"
            app:layout_constraintTop_toTopOf="@id/nutrients_search" />

        <ImageButton
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:id="@+id/weekly_recommended"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:background="#00000000"
            android:scaleType="centerCrop"
            android:src="@drawable/rolls"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nutrients_search"
            app:layout_constraintTop_toBottomOf="@+id/ingredients" />

        <View
            style="@style/SubBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.5"
            app:layout_constraintBottom_toBottomOf="@id/weekly_text"
            app:layout_constraintEnd_toEndOf="@id/weekly_text"
            app:layout_constraintStart_toStartOf="@id/weekly_text"
            app:layout_constraintTop_toTopOf="@id/weekly_text" />

        <TextView
            android:id="@+id/weekly_text"
            style="@style/TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/weekly"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/weekly_recommended"
            app:layout_constraintEnd_toEndOf="@id/weekly_recommended"
            app:layout_constraintStart_toStartOf="@id/weekly_recommended"
            app:layout_constraintTop_toTopOf="@id/weekly_recommended" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>